# RobPR

./: readme.md
rp_01_compilers_and_build_systems/exercise/mini_core/: CMakeLists.txt
rp_01_compilers_and_build_systems/exercise/mini_core/executables/: CMakeLists.txt
rp_01_compilers_and_build_systems/exercise/mini_core/src/: CMakeLists.txt
